--- a/templates/help/github-permissions.twig
+++ b/templates/help/github-permissions.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = 'Help' %}
+{% set page_title = 'Help : GitHub Permissions' %}
 
 {% block content %}
 
-    <h2>Github Permissions Fix</h2>
+    <h1>Help - <strong>GitHub Permissions</strong></h1>
+
+    <p><a class="btn btn--small btn--back" href="{{ urlFor('help') }}">Back to Help</a></p>
 
     <p>If you are a collaborator on a Github repository, but are unable to build or push the code in HAL 9000, then you may need to make the following changes.</p>
 
