--- a/templates/help/hal.twig
+++ b/templates/help/hal.twig
@@ -3,7 +3,7 @@
 {% set page_title = 'Help' %}
 
 {% block content %}
-    <h2>Help - HAL 9000</h2>
+    <h1>Help - <strong>HAL 9000</strong></h1>
 
     <div class="hero-video">
         <video controls autoplay loop>
