--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-    <p><a class="btn btn--small btn--back" href="{{ urlFor('repository.status', {'id': push.repository.id}) }}">Back to Repository Status</a></p>
+    <p><a class="btn btn--small btn--back" href="{{ urlFor('repository.status', {'id': push.repository.id}) }}">Back to Application Status</a></p>
 
-    <h2>Push Information</h2>
+    <h1>{{ page_title }}</h1>
 
     <h4>Push Details</h4>
 
