--- a/templates/repository/deployments.twig
+++ b/templates/repository/deployments.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
+{% set js_components = ["deployment.add"] %}
 
-{% set page_title = repository.name ~ ' deployments' %}
+{% set page_title = 'Deployments : ' ~ repository.name %}
 
 {% block content %}
-    <h2>Deployment Targets for <b>{{ repository.name }}</b> </h2>
+    <h1>Deployment Targets - <strong>{{ repository.name }}</strong> </h1>
 
-    <p><a class="btn btn--small btn--back" href="{{ urlFor('repository', {'id': repository.id}) }}">Back to Repository</a></p>
+    <p><a class="btn btn--small btn--back" href="{{ urlFor('repository', {'id': repository.id}) }}">Back to Application</a></p>
 
     <p>
         Deployment targets define what servers your application can be deployed to and where on that server the code will be uploaded.
@@ -17,7 +18,7 @@
 
         {% for environment in environments %}
 
-            <h3>{{ environment.key }}</h3>
+            <h2>{{ environment.key }}</h2>
 
             <table class="table--spacing-medium" data-tablesaw-mode="stack">
                 <thead>
@@ -41,7 +42,7 @@
                                     <a href="{{ deployment.url.asString() }}">{{ deployment.url.asString() }}</a>
                                 {% endif %}
                             </td>
-                            <td>
+                            <td class="tr">
                                 <a class="btn btn--tiny" href="{{ urlFor('repository.deployment', {repository: deployment.repository.id, id: deployment.id}) }}">View</a>
                             </td>
                         </tr>
