--- a/templates/repository/repositories.twig
+++ b/templates/repository/repositories.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 {% import "_partial/macros.twig" as macros %}
 
-{% set page_title = "Repositories" %}
+{% set page_title = "Applications" %}
 
 {% block content %}
-    <h2>Repositories</h2>
+    <h1>{{ page_title }}</h1>
 
     <table class="table--spacing-medium" data-tablesaw-mode="stack">
         <thead>
             <tr>
-                <th>Repository</th>
+                <th>Application</th>
                 <th>Github Source</th>
                 <th class="t5"></th>
             </tr>
@@ -56,7 +56,7 @@
     </table>
 
     <p>
-        <a class="btn" href="{{ urlFor('repository.admin.add') }}">Add Repository</a>
+        <a class="btn" href="{{ urlFor('repository.admin.add') }}">Add Application</a>
         <a class="btn" href="{{ urlFor('group.admin.add') }}">Add Group</a>
     </p>
 {% endblock %}
