--- a/templates/environment/environment.twig
+++ b/templates/environment/environment.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = 'Environment: ' ~ env.key %}
+{% set page_title = 'Environment : ' ~ env.key %}
 
 {% block content %}
-    <h2>Environment Information</h2>
+    <h1>Environment - <strong>{{ env.key }}</strong></h1>
 
     <h3>Name</h3>
     <p>{{ env.key }}</p>
 
     <h3>Servers</h3>
     {% if servers %}
-        <table class="table--spacing-medium" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -34,12 +34,14 @@
         <p><strong>Note:</strong> All associated servers must be removed or transferred to remove this environment.</p>
     {% endif %}
 
-    <div>
+    <ul class="button-list">
+        <li><a class="btn" href="{{ urlFor('environments') }}">Environments</a></li>
         {% if isUserAdmin(currentUser) %}
-            <a class="btn btn--action" href="{{ urlFor('environment.admin.edit', {id: env.id}) }}">Edit</a>
+            <li><a class="btn btn--action" href="{{ urlFor('environment.admin.edit', {id: env.id}) }}">Edit Environment</a></li>
             {% if not servers and isUserAdmin(currentUser) %}
-                <a class="btn btn--destructive" href="{{ urlFor('environment.admin.remove', {id: env.id}) }}">Remove Environment</a>
+                <li><a class="btn btn--destructive" href="{{ urlFor('environment.admin.remove', {id: env.id}) }}">Remove Environment</a></li>
             {% endif %}
         {% endif %}
-    </div>
+    </ul>
+
 {% endblock %}
