Add working permission removal, being transition to new bouncers

--- a/templates/admin/audit.logs.twig
+++ b/templates/admin/audit.logs.twig
@@ -22,7 +22,7 @@
         {% for log in logs %}
             <tr>
                 <td>{{ log.recorded|html5date }}</td>
-                <td><a href="{{ urlFor('user', {'id': log.user.id}) }}">{{ log.user.handle }}</a></td>
+                <td><a href="{{ urlFor('user', {'user': log.user.id}) }}">{{ log.user.handle }}</a></td>
                 <td><b>{{ log.action }}</b></td>
                 <td>{{ log.entity|replace({':': ' : '}) }}</td>
             </tr>
