--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -24,7 +24,7 @@
             </a>
         </li>
         <li>
-            <a href="{{ urlFor('admin.queue.page1') }}" class="btn">
+            <a href="{{ urlFor('queue.history.page1') }}" class="btn">
                 {{ macros.icon('in') }} Queue History
             </a>
         </li>
