--- a/templates/_partial-job/build-table.twig
+++ b/templates/_partial-job/build-table.twig
@@ -26,7 +26,7 @@
             </td>
             <td>
                 {% if build.user %}
-                    <a href="{{ urlFor('user', {'id': build.user.id}) }}">{{ build.user.handle }}</a>
+                    <a href="{{ urlFor('user', {'user': build.user.id}) }}">{{ build.user.handle }}</a>
                 {% else %}
                     Unknown
                 {% endif %}
