--- a/templates/_partial-job/push-table.twig
+++ b/templates/_partial-job/push-table.twig
@@ -28,7 +28,7 @@
             <td>Build <a href="{{ urlFor('build', {'build': push.build.id}) }}">{{ push.build.id|formatBuildId }}</a></td>
             <td>
                 {% if push.user %}
-                    <a href="{{ urlFor('user', {'id': push.user.id}) }}">{{ push.user.handle }}</a>
+                    <a href="{{ urlFor('user', {'user': push.user.id}) }}">{{ push.user.handle }}</a>
                 {% else %}
                     Unknown
                 {% endif %}
