--- a/templates/kraken/_partial/configuration.status.twig
+++ b/templates/kraken/_partial/configuration.status.twig
@@ -27,7 +27,7 @@
         <dt class="split__title">Deployed by</dt>
         <dd class="js-build-duration">
             {% if configuration.user %}
-                <a href="{{ urlFor('user', {id: configuration.user.id}) }}">{{ configuration.user.handle }}</a>
+                <a href="{{ urlFor('user', {user: configuration.user.id}) }}">{{ configuration.user.handle }}</a>
             {% else %}
                 Unknown
             {% endif %}
