--- a/templates/push/start.twig
+++ b/templates/push/start.twig
@@ -41,7 +41,7 @@
             <dt class="split__title">Initiator</dt>
             <dd>
                 {% if build.user %}
-                    <a href="{{ urlFor('user', {'id': build.user.id}) }}">{{ build.user.name }}</a>
+                    <a href="{{ urlFor('user', {'user': build.user.id}) }}">{{ build.user.name }}</a>
                 {% else %}
                     Unknown
                 {% endif %}
@@ -112,7 +112,7 @@
                             </td>
                             <td>
                                 {% if active.user %}
-                                    <a href="{{ urlFor('user', {'id': active.user.id}) }}">{{ active.user.name }}</a>
+                                    <a href="{{ urlFor('user', {'user': active.user.id}) }}">{{ active.user.name }}</a>
                                 {% else %}
                                     Unknown
                                 {% endif %}
